<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_battery</name>
  <version>1.0.0</version>
  <description>Package for modelling battery life of robots</description>
  <maintainer email="yadunund@openrobotics.org">yadu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rmf_utils</build_depend>
  <build_export_depend>rmf_utils</build_export_depend>

  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>rmf_cmake_uncrustify</test_depend>
  
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
