<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rmf_cmake_uncrustify</name>
  <version>1.9999.0</version>
  <description>
    ament_cmake_uncrustify with support for parsing a config file.
    </description>
  <maintainer email="yadunund@openrobotics.org">Yadunund Vijay</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_core_rolling</buildtool_depend>
  <buildtool_depend>ament_cmake_test_rolling</buildtool_depend>

  <buildtool_export_depend>ament_cmake_test_rolling</buildtool_export_depend>
  <buildtool_export_depend>ament_uncrustify_rolling</buildtool_export_depend>

  <test_depend>ament_cmake_copyright_rolling</test_depend>
  <test_depend>ament_cmake_lint_cmake_rolling</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
