<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_fleet_adapter</name>
  <version>0.0.0</version>
  <description>Fleet Adapter package for RMF fleets.</description>
  <maintainer email="grey@openrobotics.org">Grey</maintainer>
  <maintainer email="aaron@openrobotics.org">Aaron</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rmf_utils</depend>
  <depend>rmf_dispenser_msgs</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_fleet_utils</depend>
  <depend>rmf_task_msgs</depend>
  <depend>rmf_traffic</depend>
  <depend>rmf_traffic_ros2</depend>
  <depend>rmf_traffic_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

