<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_rxcpp</name>
  <version>0.0.0</version>
  <description>ReactiveX for RMF</description>
  <maintainer email="grey@openrobotics.org">Grey</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rmf_traffic</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

