<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_task_ros2</name>
  <version>1.1.0</version>
  <description>A package managing the dispatching of tasks in RMF system.</description>
  <maintainer email="youliang@openrobotics.org">youliang</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rmf_utils</depend>
  <depend>rmf_traffic</depend>
  <depend>rmf_traffic_ros2</depend>
  <depend>rmf_task_msgs</depend>
  <depend>rclcpp</depend>

  <build_depend>eigen</build_depend>

  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>rmf_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
